Fixed search bar overflowing issue and made it more responsive on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
+html {
+    box-sizing: border-box;
+}
+
 *, *::before, *::after {
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
+    box-sizing: inherit;
 }
 
 body {
@@ -10,9 +14,6 @@ body {
 }
 
 main {
-    /* display: flex;
-    flex-direction: column;
-    justify-content: space-between; */
     width: 100%;
     height: 100vh;
     padding-block: 1.5em;
@@ -42,10 +43,14 @@ main {
 #local-date,
 #country-name {
     font-size: 1.2rem;
-    font-weight: 700;
+    font-weight: 600;
 }
 
 @media screen and (max-width: 800px) {
+    html {
+        font-size: 13px;
+    }
+
     .short-info {
         flex-direction: column;
         align-items: center;
@@ -57,25 +62,24 @@ main {
     }
 }
 
-/* Search bar */
+/* ********************************** Search bar */
 
 .search-bar {
     display: flex;
     align-items: center;
+    margin: 1.5em auto;
     width: 100%;
     max-width: 40rem;
-    height: 30px;
-    margin: 4em auto;
 }
 
 #city-input {
     all: unset;
+    height: 2em;
     width: 100%;
-    height: 100%;
     padding: 0.5em;
     background-color: rgba(255, 255, 255, 0.3);
     color: white;
-    font-weight: 600;
+    font-weight: 800;
     border-radius: 8px 0 0 8px;
 }
 
@@ -85,13 +89,15 @@ main {
 
 #search-button {
     all: unset;
-    height: 100%;
+    height: 2em;
+    width: 2em;
     padding: 0.5em;
     background-color: rgba(255, 255, 255, 0.4);
     border-radius: 0 8px 8px 0;
     cursor: pointer;
 }
 
-#search-button svg {
+#search-button img {
     vertical-align: middle;
+    height: 100%;
 }
